--- a/www/template/univ_detail.html
+++ b/www/template/univ_detail.html
@@ -12,7 +12,15 @@
 <div class="container">
     <div style="padding: 10px !important">
         <div class="sch-detail">
-            <div class="sch-detail sch-detail-cover" style="background-image: url('http://scholarship.ezytech.biz/{{uni_img_path}}');"></div>
+            <div class="sch-detail sch-detail-cover" style="background-image: url('img/u_bg.jpg');">
+                <!--<div class="sch-detail sch-detail-cover" style="background-image: url('http://scholarship.ezytech.biz/{{uni_img_path}}');">-->
+                <div class="sch-logo-wrapper">
+                    <div class="sch-logo">
+                        <img src="img/logo.png" width="50" height="50" />
+                    </div>
+                    <p>សកលវិទ្យាល័យ បែ៊លធីអន្តរជាតិ</p>
+                </div>
+            </div>
             <!--University Info-->
             <div class="sch-detail sch-detail-info">
                 <div class="sch-detail-info-title">ពត៌មានសាកលវិទ្យាល័យ</div>
