change dynamic logo and name to university

--- a/www/template/univ_detail.html
+++ b/www/template/univ_detail.html
@@ -16,9 +16,9 @@
                 <!--<div class="sch-detail sch-detail-cover" style="background-image: url('http://scholarship.ezytech.biz/{{uni_img_path}}');">-->
                 <div class="sch-logo-wrapper">
                     <div class="sch-logo">
-                        <img src="img/logo.png" width="50" height="50" />
+                        <img src="http://scholarship.ezytech.biz/{{uni_logo_path}}" width="50" height="50" />
                     </div>
-                    <p>សកលវិទ្យាល័យ បែ៊លធីអន្តរជាតិ</p>
+                    <p>{{uni_name}}</p>
                 </div>
             </div>
             <!--University Info-->
