ommit height logo

--- a/www/template/univ_detail.html
+++ b/www/template/univ_detail.html
@@ -16,7 +16,7 @@
                 <!--<div class="sch-detail sch-detail-cover" style="background-image: url('http://scholarship.ezytech.biz/{{uni_img_path}}');">-->
                 <div class="sch-logo-wrapper">
                     <div class="sch-logo">
-                        <img src="http://scholarship.ezytech.biz/{{uni_logo_path}}" width="50" height="50" />
+                        <img src="http://scholarship.ezytech.biz/{{uni_logo_path}}" width="50%" />
                     </div>
                     <p>{{uni_name}}</p>
                 </div>
