--- a/www/template/scholarship_list.html
+++ b/www/template/scholarship_list.html
@@ -2,7 +2,7 @@
     {{#each scholar}}
     <li data-icon="false" data-uni-map="{{uni_map}}" onclick="ScholarshipModel.fetchById({{sch_id}},{{uni_id}})">
         <a href='#page-scholarship-detail' data-transition="slide">
-            <div class="scholar scholarIcon scholarIcon4"></div>
+            <div class="scholar scholarIcon"></div>
             <h2>{{sch_name}}</h2>
             <p>{{uni_name}}</p>
             <p style="color: brown">{{m_name}}</p>            
