--- a/www/css/master.css
+++ b/www/css/master.css
@@ -592,6 +592,18 @@ ul.tabs li.current {
     background-position: center !important;
     position: relative;
 }
+.sch-detail-1 {
+    -webkit-box-shadow: 0 0 0px #b1b1b1 !important;
+    -moz-box-shadow: 0 0 0px #b1b1b1 !important;
+    box-shadow: 0 0 0px #b1b1b1 !important;
+}
+.sch-detail-1.sch-detail-cover {
+    width: 100%;
+    height: 250px;
+    background-size: cover !important;
+    background-position: center !important;
+    position: relative;
+}
 .sch-logo-wrapper {
     position: absolute; top: 50%;
     left: 50%;
