--- a/www/template/university.html
+++ b/www/template/university.html
@@ -1,4 +1,5 @@
-<ul data-filter="true" data-input="#search-university" id="university-listview" data-role="listview" data-inset="true" class="university">
+<input id="myFilter" data-type="search" placeholder="ស្វែងរកសកលវិទ្យាល័យ" style="padding: 0 !important; padding-left: 30px !important;" />
+<ul data-role="listview" data-filter="true" data-input="#myFilter" class="university" style="margin-top: 20px !important;">
     {{#each university}}
     <li data-icon="false" data-uni-map="{{uni_map}}" onclick="UniversityModel.fetchById({{uni_id}})">
         <a href="#page-university-detail" data-transition="slide">
