Change back btn position

--- a/www/css/master.css
+++ b/www/css/master.css
@@ -286,10 +286,9 @@ footer {
     height: 40px;
     width: 40px;
 }
-
 .menu-header ul li svg {
     width: 30px;
-    margin: 0 auto;
+    margin: 0 10px;
     fill: #fff;
 }
 
