--- a/www/template/univ_detail.html
+++ b/www/template/univ_detail.html
@@ -1,18 +1,19 @@
 {{#each univer}}
 <header class="header-title">
     <nav class="menu-header">
-        <h1 id="header-title" class="h1-header toLeft">{{uni_name}}</h1>
-        <ul class="toRight menu-header-svg" style="padding: 0; margin: 0;">
-            <li>
-                <a href="./" data-rel="back" style="margin-top: 5px !important" class="ui-btn-right ui-btn ui-icon-arrow-l ui-btn-icon-notext ui-shadow ui-corner-all"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                                                                                                                                                            width="512px" height="512px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
-                        <g>
-                            <path d="M464,256c0-114.875-93.125-208-208-208S48,141.125,48,256s93.125,208,208,208S464,370.875,464,256z M192,256l96-96v192
-                                  L192,256z"/>
-                        </g>
-                    </svg></a>
+        <ul class="toLeft menu-header-svg" style="padding: 0; margin: 0;">
+            <li style="margin-left: 10px !important;">
+                <a href="./" data-role="back">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="50px" height="50px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+<polygon points="352,128.4 319.7,96 160,256 160,256 160,256 319.7,416 352,383.6 224.7,256 "/>
+</svg>
+
+                </a>
             </li>
         </ul>
+        <h1 id="header-title" class="h1-header toLeft">{{uni_name}}</h1>
+
     </nav>
 </header>
 <div class="container">
