--- a/www/template/major.html
+++ b/www/template/major.html
@@ -4,7 +4,7 @@
         <a href="#page-scholarship-by-major"  data-transition="slide">
             <div class="scholar scholarIcon"></div>
             <h2>{{m_name}}</h2>
-            <p>{{m_desc}} ({{num_of_sch}})</p>
+            <p>ចំនួនអាហារូបករណ៍ <b>({{num_of_sch}})</b></p>
         </a>
     </li>
     {{/each}}
