--- a/www/template/university.html
+++ b/www/template/university.html
@@ -1,4 +1,4 @@
-<input id="myFilter" data-type="search" placeholder="ស្វែងរកសកលវិទ្យាល័យ" style="padding: 0 !important; padding-left: 30px !important;" />
+<!--<input id="myFilter" data-type="search" placeholder="ស្វែងរកសកលវិទ្យាល័យ" style="padding: 0 !important; padding-left: 30px !important;" />-->
 <ul data-role="listview" data-filter="true" data-input="#myFilter" class="university" style="margin-top: 20px !important;">
     {{#each university}}
     <li data-icon="false" data-uni-map="{{uni_map}}" onclick="UniversityModel.fetchById({{uni_id}})">
@@ -7,7 +7,7 @@
                 <img src="http://scholarship.ezytech.biz/{{uni_logo_path}}" class="university universityLogo"/>
             </div>
             <h2>{{uni_name}}</h2>
-            <p>{{uni_shortcut}} ({{num_of_sch}})</p>
+            <p>ចំនួនអាហារូបករណ៍ <b> ({{num_of_sch}})</b></p>
         </a>
     </li>
     {{/each}}
