--- a/www/template/contact_for_sch.html
+++ b/www/template/contact_for_sch.html
@@ -1,10 +1,10 @@
-<div class="sch-detail-info-title">អាស័យដ្ធានទំនាក់ទំនង</div>
+<div class="sch-detail-info-title">ទំនាក់ទំនង</div>
 <div class="sch-detail-info-detail">
     <table class="ui-responsive table-stroke sch-detail-info-detail-table" data-role="table" data-mode="">     
         <tbody>
             {{#each contact}}
             <tr>
-                <td style="width:120px">អាស័យដ្ធាន</td>
+                <td style="width:120px">អាសយដ្ឋាន</td>
                 <td>{{c_address}}</td>
             </tr> 
             <tr>
