--- a/www/css/master.css
+++ b/www/css/master.css
@@ -9,9 +9,9 @@ color-blue:hover : #7474BF
 
 
 * {
-    margin: 0 !important;
-    padding: 0 !important;
-    box-sizing: border-box !important;
+     margin: 0 !important; 
+    /* padding: 0 !important; */
+    /* box-sizing: border-box !important; */
 }
 
 html,
@@ -198,7 +198,7 @@ input[type=password],
 select,
 textarea {
     width: 100% !important;
-    padding: 7px !important;
+    padding: 7px !important; 
     border-radius: 0 !important;
     border: none !important;
 }
