conrrect style in * master.css after i make it wrong

--- a/www/css/master.css
+++ b/www/css/master.css
@@ -10,8 +10,8 @@ color-blue:hover : #7474BF
 
 * {
      margin: 0 !important; 
-    /* padding: 0 !important; */
-    /* box-sizing: border-box !important; */
+     padding: 0 !important; 
+     box-sizing: border-box !important; 
 }
 
 html,
