--- a/www/template/scholarship_list.html
+++ b/www/template/scholarship_list.html
@@ -1,6 +1,6 @@
 <ul data-role="listview" data-inset="true" id="scholarship-listview" class="scholar" data-filter="true" data-input="#search-sch">
     {{#each scholar}}
-    <li data-icon="false" data-uni-map="{{uni_map}}" onclick="ScholarshipModel.fetchById({{sch_id}},{{uni_id}})">
+    <li data-icon="false" onclick="ScholarshipModel.fetchById({{sch_id}},{{uni_id}})">
         <a href='#page-scholarship-detail' data-transition="slide">
             <div class="scholar scholarIcon"></div>
             <h2>{{sch_name}}</h2>
