--- a/www/template/scholarship_list_by_search.html
+++ b/www/template/scholarship_list_by_search.html
@@ -3,7 +3,7 @@
         <div class="sch-detail">
             <ul data-role="listview" data-inset="true" id="scholarship-listview" class="scholar">
                 {{#each scholar}}
-                <li data-icon="false" data-uni-map="{{uni_map}}" onclick="ScholarshipModel.fetchById({{sch_id}},{{uni_id}})">
+                <li data-icon="false" onclick="ScholarshipModel.fetchById({{sch_id}},{{uni_id}})">
                     <a href='#page-scholarship-detail' data-transition="slide">
                         <div class="scholar scholarIcon scholarIcon4"></div>
                         <h2>{{sch_name}}</h2>
