--- a/www/template/university.html
+++ b/www/template/university.html
@@ -1,6 +1,6 @@
 <ul data-role="listview" data-filter="true" data-input="#search-university" class="university" style="" id="university-listview">
     {{#each university}}
-    <li data-icon="false" data-uni-map="{{uni_map}}" onclick="UniversityModel.fetchById({{uni_id}})">
+    <li data-icon="false" onclick="UniversityModel.fetchById({{uni_id}})">
         <a href="#page-university-detail" data-transition="slide">
             <div class="university universityIcon">
                 <img src="http://scholarship.ezytech.biz/{{uni_logo_path}}" class="university universityLogo"/>
