add heart button to sch detail

--- a/www/template/scholarship_detail.html
+++ b/www/template/scholarship_detail.html
@@ -11,6 +11,7 @@
                 </svg>
                 
                                     </a>-->
+                <a href="#" onclick="set_favourite()" style="margin-top: 5px !important" class="ui-btn-right ui-btn ui-icon-heart ui-btn-icon-notext ui-shadow ui-corner-all"  data-role="button" role="button">heart</a>
             </li>
         </ul>
         <h1 id="header-title" class="h1-header toLeft">អាហារូបករណ៍ ({{uni_shortcut}})</h1>
