--- a/www/css/master.css
+++ b/www/css/master.css
@@ -345,8 +345,6 @@ ul.tabs li.current {
     border: none !important;
     border-radius: 0 !important;
     background: none !important;
-    -webkit-box-shadow: none !important;
-    -moz-box-shadow: none !important;
     box-shadow: none !important;
 
 }
@@ -356,8 +354,6 @@ ul.tabs li.current {
     margin-bottom: 10px !important;
     border-top-left-radius: 5px !important;
     border-bottom-left-radius: 5px !important;
-    -webkit-box-shadow: 0 0 12px #b1b1b1 !important;
-    -moz-box-shadow: 0 0 12px #b1b1b1 !important;
     box-shadow: 0 0 12px #b1b1b1 !important;
 }
 
@@ -455,8 +451,6 @@ ul.tabs li.current {
     margin-bottom: 10px !important;
     border-top-left-radius: 5px !important;
     border-bottom-left-radius: 5px !important;
-    -webkit-box-shadow: 0 0 12px #b1b1b1 !important;
-    -moz-box-shadow: 0 0 12px #b1b1b1 !important;
     box-shadow: 0 0 12px #b1b1b1 !important;
     font-size: 16px !important;
 }
@@ -510,8 +504,6 @@ ul.tabs li.current {
     margin-bottom: 10px !important;
     border-top-left-radius: 5px !important;
     border-bottom-left-radius: 5px !important;
-    -webkit-box-shadow: 0 0 12px #b1b1b1 !important;
-    -moz-box-shadow: 0 0 12px #b1b1b1 !important;
     box-shadow: 0 0 12px #b1b1b1 !important;
 }
 
@@ -571,6 +563,8 @@ ul.tabs li.current {
 .university.universityMore svg {
     width: 25px;
     fill: #0072ff;
+    -webkit-transform: translate(18px, 25px);
+    -ms-transform: translate(18px, 25px);
     transform: translate(18px, 25px);
 }
 
@@ -579,9 +573,68 @@ ul.tabs li.current {
 /* Scholarship Detail */
 /* ---------------------------------------------- */
 
+.aboutPage {
+    width: 100% !important;
+    display: block !important;
+    text-align: left !important;
+}
+.aboutPage-dev-title {
+    height: auto;
+    color: #ffffff;
+    font-size: 150% !important;
+    padding: 30px 0 !important;
+    margin-left: 20px !important;
+}
+.aboutPage-dev-profile {
+    height: auto;
+    padding: 10px 0 !important;
+}
+.aboutPage-dev-profile-pic {
+    float: left;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-size: 100px 100px!important;
+    border: 5px solid #fff;
+    margin: 0 30px 0 20px!important;
+}
+.aboutPage-dev-profile-info {
+    float: left; text-align: left;
+}
+.aboutPage-dev-profile-info p:nth-of-type(1) {
+    font-size: 20px;
+    color: #ff4081;
+    font-weight: bold;
+}
+.aboutPage-dev-profile-info p:nth-of-type(2) {
+    font-size: 13px;
+    color: #f5f5f5;
+    margin-bottom: 15px!important;
+}
+.aboutPage-dev-profile-social {
+    display: block;
+}
+.aboutPage-dev-profile-social a{
+    margin-right: 10px!important;
+}
+.aboutPage-dev-profile-social a:last-child {
+    margin-right: 0 !important;
+}
+.aboutPage-dev-profile-social a svg {
+    fill: #8259cb;
+    -webkit-transition: fill 0.2s ease-in-out;
+    transition: fill 0.2s ease-in-out;
+}
+.aboutPage-dev-profile-social a svg:hover,
+.aboutPage-dev-profile-social a svg:visited,
+.aboutPage-dev-profile-social a svg:link,
+.aboutPage-dev-profile-social a svg:focus {
+    fill: #ff4081;
+}
+
+
+
 .sch-detail {
-    -webkit-box-shadow: 0 0 12px #b1b1b1 !important;
-    -moz-box-shadow: 0 0 12px #b1b1b1 !important;
     box-shadow: 0 0 12px #b1b1b1 !important;
 }
 .sch-detail.sch-detail-cover {
@@ -592,8 +645,6 @@ ul.tabs li.current {
     position: relative;
 }
 .sch-detail-1 {
-    -webkit-box-shadow: 0 0 0px #b1b1b1 !important;
-    -moz-box-shadow: 0 0 0px #b1b1b1 !important;
     box-shadow: 0 0 0px #b1b1b1 !important;
 }
 .sch-detail-1.sch-detail-cover {
@@ -711,8 +762,6 @@ ul.tabs li.current {
 .btn-share {
     margin: 20px 0 !important;
     background: #fff;
-    -webkit-box-shadow: 0 0 12px #b1b1b1 !important;
-    -moz-box-shadow: 0 0 12px #b1b1b1 !important;
     box-shadow: 0 0 12px #b1b1b1 !important;
 }
 
